<resources>
    <string name="app_name">Gita Bank</string>
    <string name="sign_in">Sign in</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="fe_male">Female</string>
    <string name="confirm_code">Confirm code</string>
    <string name="account">Accounts</string>
    <string name="statistics">Statistics</string>
    <string name="cashback">Cashback</string>
    <string name="settings">Settings</string>
    <string name="my_accounts">My accounts</string>
    <string name="add_card">Add Card</string>
    <string name="payment">Payment</string>
    <string name="send">Send</string>
    <string name="more">More</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="card_number">Card number</string>
    <string name="expired_date">Expired date</string>
    <string name="card_name">Card name</string>
    <string name="name">Name</string>
    <string name="default_card_number">0000 0000 0000 0000</string>
    <string name="default_card_number_trim">0000000000000000</string>
    <string name="default_date">01/23</string>
    <string name="submit">Submit</string>
    <string name="transfer_money">Transfer money</string>
    <string name="amount">Amount(UZS)</string>
    <string name="enter_amount">Enter amount</string>
    <string name="selected_card">Selected card</string>
    <string name="send_to">Send to</string>
    <string name="enter_card_number">Enter the Card number</string>
    <string name="identified_user">Identified user</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="message">Message</string>
    <string name="choose_date">Choose date</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="confirm_new_password">Confirm the new password</string>
    <string name="input_code">Input pin code</string>
    <string name="mastercard">Mastercard</string>
    <string name="next">Next</string>
    <string name="recipient">Recipient</string>
    <string name="saved_payment">Add to Saved Payments</string>
    <string name="code_resend">Resend code</string>
    <string name="exchanges">Exchanges</string>
    <string name="monitoring">Monitoring</string>
    <string name="chat">Chat</string>
</resources>