<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/action_bar_container"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_first_name"
        style="@style/OutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_component"
        android:hint="@string/first_name"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar_container"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_last_name"
        style="@style/OutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_component"
        android:layout_marginTop="@dimen/margin_component"
        android:hint="@string/last_name"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date_of_birth"
        style="@style/OutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_component"
        android:layout_marginTop="@dimen/margin_component"
        android:hint="@string/date_of_birth"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        style="@style/OutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_component"
        android:layout_marginTop="@dimen/margin_component"
        android:hint="@string/phone_number"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_date_of_birth">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/OutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_component"
        android:layout_marginTop="@dimen/margin_component"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:helperText="Password length is greater than or equal to 6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_phone"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/app_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxEms="15"
            android:maxLength="20"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_component"
        android:layout_marginTop="@dimen/margin_component"
        android:text="@string/gender"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_gender_male"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_component"
        android:background="@drawable/bg_circle"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_gender" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_component"
        android:text="@string/male"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/image_gender_male"
        app:layout_constraintStart_toEndOf="@id/image_gender_male"
        app:layout_constraintTop_toTopOf="@id/image_gender_male" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_gender_fe_male"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_component"
        android:background="@drawable/bg_circle"
        app:layout_constraintStart_toEndOf="@id/tv_male"
        app:layout_constraintTop_toBottomOf="@id/tv_gender" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_fe_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_component"
        android:text="@string/fe_male"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/image_gender_fe_male"
        app:layout_constraintStart_toEndOf="@id/image_gender_fe_male"
        app:layout_constraintTop_toTopOf="@id/image_gender_fe_male" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="@dimen/margin_component"
        android:text="@string/sign_in"
        app:cornerRadius="@dimen/margin_std"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="MaterialGitaBankButton" />

</androidx.constraintlayout.widget.ConstraintLayout>